--- a/config.env.example
+++ b/config.env.example
@@ -1,5 +1,5 @@
-API_ID='12345'
-API_HASH='0123456789abcdef0123456789abcdef'
-BOT_TOKEN='123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11'
-BOT_USERNAME='@iftarSahur_bot'
-SUDO='791215137'
+API_ID='21037353'
+API_HASH='4b9d07400a8ec3756a0007becbddb09d'
+BOT_TOKEN='7725041214:AAEBccHvrGcqbylogalymjnWX_BiYOoSG54'
+BOT_USERNAME='@IftarSahurVaktiBot'
+SUDO='6166620373'
